Bug 206337, move addObserver to the end of the function to prevent keeping a half-initialized download manager alive. r=neil sr=bz